--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <app-header></app-header>
-<app-banner></app-banner>
-<app-tienda></app-tienda>
+<section>
+    <router-outlet></router-outlet>
+</section>
 <app-footer></app-footer>
-
-
-<router-outlet></router-outlet>
