--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,14 +1,14 @@
 <header class="p-3 bg-dark text-white">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+        <a href="/home" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
           <img src="../../assets/img/logo.png" class="logo" alt="...">
         </a>
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Tienda</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Contacto</a></li>
+          <li><a href="/home" class="nav-link px-2 text-secondary">Home</a></li>
+          <li><a href="/big-tienda" class="nav-link px-2 text-white">Tienda</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Categorias</a></li>
         </ul>
 
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
@@ -16,7 +16,8 @@
         </form>
 
         <div class="text-end">
-          <button type="button" class="btn btn-outline-light me-2">Login</button>
+          
+            <a href="/login"><button type="button" class="btn btn-outline-light me-2">Login</button></a> 
           <button type="button" class="btn btn-warning">Sign-up</button>
         </div>
       <div class="fs-4 mb-3 carritoContainer">
