--- a/src/app/components/tienda/tienda.component.html
+++ b/src/app/components/tienda/tienda.component.html
@@ -1,11 +1,10 @@
 <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Album example</h1>
-        <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+        <p class="lead text-muted">Registrate para empezar a disfrutar de las mejores marcas en accesorios !</p>
         <p>
-          <a href="#" class="btn btn-primary my-2">Main call to action</a>
-          <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+          <a href="/registro" class="btn btn-primary my-2">Registrarme</a>
+          <a href="/login" class="btn btn-secondary my-2">Iniciar sesión</a>
         </p>
       </div>
     </div>
@@ -16,151 +15,112 @@
 
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-            <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-warning">Agregar al carrito</button>
-                  <button type="button" class="btn btn-sm btn-outline-warning">Ver detalle</button>
-                </div>
-                <small class="text-muted">9 mins</small>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-            <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-warning">Agregar al carrito</button>
-                  <button type="button" class="btn btn-sm btn-outline-warning">Ver detalle</button>
-                </div>
-                <small class="text-muted">9 mins</small>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-            <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
+          <div class="p-3 border bg-light"> <div class="card shadow-sm">
+              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></svg>
+  
+              <div class="card-body">
+                <p class="card-text">Producto 1</p>
+                <p class="card-text">$2000</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-warning">Agregar al carrito</button>
                     <button type="button" class="btn btn-sm btn-outline-warning">Ver detalle</button>
+                  </div>
+                 
                 </div>
-                <small class="text-muted">9 mins</small>
               </div>
-            </div>
-          </div>
+            </div></div>
         </div>
-
         <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-            <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
+          <div class="p-3 border bg-light"> <div class="card shadow-sm">
+              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></svg>
+  
+              <div class="card-body">
+                <p class="card-text">Producto 1</p>
+                <p class="card-text">$2000</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-warning">Agregar al carrito</button>
                     <button type="button" class="btn btn-sm btn-outline-warning">Ver detalle</button>
+                  </div>
+                 
                 </div>
-                <small class="text-muted">9 mins</small>
               </div>
-            </div>
-          </div>
+            </div></div>
         </div>
         <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-            <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
+          <div class="p-3 border bg-light"> <div class="card shadow-sm">
+              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></svg>
+  
+              <div class="card-body">
+                <p class="card-text">Producto 1</p>
+                <p class="card-text">$2000</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-warning">Agregar al carrito</button>
                     <button type="button" class="btn btn-sm btn-outline-warning">Ver detalle</button>
+                  </div>
+                 
                 </div>
-                <small class="text-muted">9 mins</small>
               </div>
-            </div>
-          </div>
+            </div></div>
         </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
 
-            <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
+        <div class="col">
+          <div class="p-3 border bg-light"> <div class="card shadow-sm">
+              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></svg>
+  
+              <div class="card-body">
+                <p class="card-text">Producto 1</p>
+                <p class="card-text">$2000</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-warning">Agregar al carrito</button>
                     <button type="button" class="btn btn-sm btn-outline-warning">Ver detalle</button>
+                  </div>
+                 
                 </div>
-                <small class="text-muted">9 mins</small>
               </div>
-            </div>
-          </div>
+            </div></div>
         </div>
-
         <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-            <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
+          <div class="p-3 border bg-light"> <div class="card shadow-sm">
+              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></svg>
+  
+              <div class="card-body">
+                <p class="card-text">Producto 1</p>
+                <p class="card-text">$2000</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-warning">Agregar al carrito</button>
                     <button type="button" class="btn btn-sm btn-outline-warning">Ver detalle</button>
+                  </div>
+                 
                 </div>
-                <small class="text-muted">9 mins</small>
               </div>
-            </div>
-          </div>
+            </div></div>
         </div>
         <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-            <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-warning">Agregar al carrito</button>
-                  <button type="button" class="btn btn-sm btn-outline-warning">Ver detalle</button>
-                </div>
-                <small class="text-muted">9 mins</small>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-            <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
+          <div class="p-3 border bg-light"> <div class="card shadow-sm">
+              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></svg>
+  
+              <div class="card-body">
+                <p class="card-text">Producto 1</p>
+                <p class="card-text">$2000</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-warning">Agregar al carrito</button>
                     <button type="button" class="btn btn-sm btn-outline-warning">Ver detalle</button>
+                  </div>
+                 
                 </div>
-                <small class="text-muted">9 mins</small>
               </div>
-            </div>
-          </div>
+            </div></div>
         </div>
+        
+         
+      
+        
       </div>
     </div>
   </div>
