Se acomodó el home y se maquetaron los filtros de la tienda

--- a/src/app/components/big-tienda/big-tienda.component.html
+++ b/src/app/components/big-tienda/big-tienda.component.html
@@ -6,28 +6,36 @@
     </div>
     <div class="offcanvas-body">
        
-        <div class="list-group">
-            <label class="list-group-item border border-warning">
-              <input class="form-check-input me-1 " type="checkbox" value="">
-              First checkbox
+        <div class="list-group m-2">
+          <label for="" class="text-center m-2">Categorías</label>
+            <label class="list-group-item  ">
+              <a href="" class="link-dark">Accesorios de auto y camioneta</a>
             </label>
-            <label class="list-group-item border border-warning">
-              <input class="form-check-input me-1" type="checkbox" value="">
-              Second checkbox
+            <label class="list-group-item  ">
+              <a href="" class="link-dark">Tuning</a>
             </label>
-            <label class="list-group-item border border-warning">
-              <input class="form-check-input me-1" type="checkbox" value="">
-              Third checkbox
+            <label class="list-group-item  ">
+              <a href="" class="link-dark">Limpieza de vehiculos</a>
             </label>
-            <label class="list-group-item border border-warning ">
-              <input class="form-check-input me-1" type="checkbox" value="">
-              Fourth checkbox
-            </label>
-            <label class="list-group-item border border-warning">
-              <input class="form-check-input me-1" type="checkbox" value="">
-              Fifth checkbox
+            <label class="list-group-item  ">
+              <a href="" class="link-dark">Audio para vehiculos</a>
             </label>
           </div>
+
+          <div class="list-group m-2">
+            <label for="" class="text-center m-2">Precio</label>
+              <label class="list-group-item  ">
+                <a href="" class="link-dark">Hasta $2.000</a>
+              </label>
+              <label class="list-group-item  ">
+                <a href="" class="link-dark">$2.000 a $5.000</a>
+              </label>
+              <label class="list-group-item  ">
+                <a href="" class="link-dark">Más de $5.000</a>
+              </label>
+              
+            </div>
+
       </div>
     </div>
 
@@ -36,6 +44,7 @@
     
   <a class="btn btn-outline-dark m-4" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-expanded="false" aria-controls="offcanvasExample">
     Filtros de búsqueda
+    <i class="bi bi-filter"></i>
   </a>
   
     <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3 m-1">
