--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,9 +1,9 @@
 <footer class="text-muted py-5 bg-dark">
   <div class="container">
     <p class="float-end mb-1">
-      <a href="#">Back to top</a>
+      <a href="/home">Back to top</a>
     </p>
-    <p class="mb-1 text-white">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-    <p class="mb-0 text-white">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="/docs/5.2/getting-started/introduction/">getting started guide</a>.</p>
+    <p class="mb-1 text-white">Taller web II</p>
+    <p class="mb-0 text-white"><a href="/"></a></p>
   </div>
 </footer>
