--- a/src/app/components/tienda/tienda.component.html
+++ b/src/app/components/tienda/tienda.component.html
@@ -1,30 +1,34 @@
-<section class="py-5 text-center container">
-    <div class="row py-lg-5">
-      <div class="col-lg-6 col-md-8 mx-auto">
-        <p class="lead text-muted">Registrate para empezar a disfrutar de las mejores marcas en accesorios !</p>
-        <p>
-          <a href="/registro" class="btn btn-primary my-2">Registrarme</a>
-          <a href="/login" class="btn btn-secondary my-2">Iniciar sesión</a>
-        </p>
+
+  <div class="b-example-divider"></div>
+
+  <div class="container col-xxl-8 px-4 py-5">
+    <div class="row justify-content-center align-items-center g-5 py-5">
+      <div class="col-lg-6 text-center">
+        <img src="../../assets/img/logo.png" class="logo" alt="..." width="">
+        <h1 class="display-5 fw-bold lh-1 mb-3">Accesorios para vehiculos</h1>
+        <p class="lead">Registrate para empezar a disfrutar de las mejores marcas en accesorios !</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-center">
+          <a href="/registro" class="btn  btn-outline-dark">Registrarme</a>
+          <a href="/login" class="btn  btn-outline-dark">Iniciar sesión</a>
+        </div>
       </div>
     </div>
-  </section>
+  </div>
 
   <div class="album py-5 bg-light">
     <div class="container">
-
+      <h2 class="text-center" >Ofertas de la semana</h2>
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="p-3 border bg-light"> <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></svg>
-  
+              <img src="../../assets/img/organizador-asiento.jpg"   width="100%" height="250" class="bd-placeholder-img card-img-top" alt=""  focusable="false" preserveAspectRatio="xMidYMid slice">
               <div class="card-body">
                 <p class="card-text">Producto 1</p>
                 <p class="card-text">$2000</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-warning">Agregar al carrito</button>
-                    <button type="button" class="btn btn-sm btn-outline-warning">Ver detalle</button>
+                    <button type="button" class="btn btn-sm  btn-outline-dark">Agregar al carrito</button>
+                    <button type="button" class="btn btn-sm  btn-outline-dark">Ver detalle</button>
                   </div>
                  
                 </div>
@@ -33,15 +37,15 @@
         </div>
         <div class="col">
           <div class="p-3 border bg-light"> <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></svg>
+            <img src="../../assets/img/organizador-asiento.jpg"   width="100%" height="250" class="bd-placeholder-img card-img-top" alt=""  focusable="false" preserveAspectRatio="xMidYMid slice">
   
               <div class="card-body">
                 <p class="card-text">Producto 1</p>
                 <p class="card-text">$2000</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-warning">Agregar al carrito</button>
-                    <button type="button" class="btn btn-sm btn-outline-warning">Ver detalle</button>
+                    <button type="button" class="btn btn-sm  btn-outline-dark">Agregar al carrito</button>
+                    <button type="button" class="btn btn-sm  btn-outline-dark">Ver detalle</button>
                   </div>
                  
                 </div>
@@ -50,15 +54,15 @@
         </div>
         <div class="col">
           <div class="p-3 border bg-light"> <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></svg>
+            <img src="../../assets/img/organizador-asiento.jpg"   width="100%" height="250" class="bd-placeholder-img card-img-top" alt=""  focusable="false" preserveAspectRatio="xMidYMid slice">
   
               <div class="card-body">
                 <p class="card-text">Producto 1</p>
                 <p class="card-text">$2000</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-warning">Agregar al carrito</button>
-                    <button type="button" class="btn btn-sm btn-outline-warning">Ver detalle</button>
+                    <button type="button" class="btn btn-sm  btn-outline-dark">Agregar al carrito</button>
+                    <button type="button" class="btn btn-sm  btn-outline-dark">Ver detalle</button>
                   </div>
                  
                 </div>
@@ -68,15 +72,15 @@
 
         <div class="col">
           <div class="p-3 border bg-light"> <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></svg>
+            <img src="../../assets/img/organizador-asiento.jpg"   width="100%" height="250" class="bd-placeholder-img card-img-top" alt=""  focusable="false" preserveAspectRatio="xMidYMid slice">
   
               <div class="card-body">
                 <p class="card-text">Producto 1</p>
                 <p class="card-text">$2000</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-warning">Agregar al carrito</button>
-                    <button type="button" class="btn btn-sm btn-outline-warning">Ver detalle</button>
+                    <button type="button" class="btn btn-sm  btn-outline-dark">Agregar al carrito</button>
+                    <button type="button" class="btn btn-sm  btn-outline-dark">Ver detalle</button>
                   </div>
                  
                 </div>
@@ -85,15 +89,15 @@
         </div>
         <div class="col">
           <div class="p-3 border bg-light"> <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></svg>
+            <img src="../../assets/img/organizador-asiento.jpg"   width="100%" height="250" class="bd-placeholder-img card-img-top" alt=""  focusable="false" preserveAspectRatio="xMidYMid slice">
   
               <div class="card-body">
                 <p class="card-text">Producto 1</p>
                 <p class="card-text">$2000</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-warning">Agregar al carrito</button>
-                    <button type="button" class="btn btn-sm btn-outline-warning">Ver detalle</button>
+                    <button type="button" class="btn btn-sm  btn-outline-dark">Agregar al carrito</button>
+                    <button type="button" class="btn btn-sm  btn-outline-dark">Ver detalle</button>
                   </div>
                  
                 </div>
@@ -102,15 +106,15 @@
         </div>
         <div class="col">
           <div class="p-3 border bg-light"> <div class="card shadow-sm">
-              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></svg>
+            <img src="../../assets/img/organizador-asiento.jpg"   width="100%" height="250" class="bd-placeholder-img card-img-top" alt=""  focusable="false" preserveAspectRatio="xMidYMid slice">
   
               <div class="card-body">
                 <p class="card-text">Producto 1</p>
                 <p class="card-text">$2000</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-warning">Agregar al carrito</button>
-                    <button type="button" class="btn btn-sm btn-outline-warning">Ver detalle</button>
+                    <button type="button" class="btn btn-sm  btn-outline-dark">Agregar al carrito</button>
+                    <button type="button" class="btn btn-sm  btn-outline-dark">Ver detalle</button>
                   </div>
                  
                 </div>
