--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,7 +17,7 @@
 
         <div class="text-end">
           <button type="button" class="btn btn-outline-light me-2"><a routerLink="/login" class="nav-link px-2 text-white">Login</a></button>
-          <button type="button" class="btn btn-warning">Sign-up</button>
+          <button type="button" class="btn btn-warning"><a routerLink="/signup" class="nav-link px-2 text-white">Registrarse</a></button>
         </div>
       <div class="fs-4 mb-3 carritoContainer">
         <i type="button" (click)="frame.show();actualizarCarrito()" class="bi bi-basket3-fill"></i>
