--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,17 +4,15 @@
             <div class="card shadow-lg border-0 rounded-lg mt-5">
                 <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
                 <div class="card-body">
-                    <form>
-                        <div class="form-group"><label class="small mb-1" for="inputEmailAddress">Email</label><input class="form-control py-4" id="inputEmailAddress" type="email" placeholder="Enter email address" /></div>
-                        <div class="form-group"><label class="small mb-1" for="inputPassword">Password</label><input class="form-control py-4" id="inputPassword" type="password" placeholder="Enter password" /></div>
-                        <div class="form-group">
-                            <div class="custom-control custom-checkbox"><input class="custom-control-input" id="rememberPasswordCheck" type="checkbox" /><label class="custom-control-label" for="rememberPasswordCheck">Remember password</label></div>
-                        </div>
-                        <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0"><a class="small" routerLink="/auth/forgot-password">Forgot Password?</a><a class="btn btn-primary" routerLink="/dashboard">Login</a></div>
+                    <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+                        <div class="form-group"><label class="small mb-1" for="inputEmailAddress">Email</label><input class="form-control py-4" id="inputEmailAddress" type="email" placeholder="Enter email address" formControlName="Username"/></div>
+                        <div class="form-group"><label class="small mb-1" for="inputPassword">Contraseña</label><input class="form-control py-4" id="inputPassword" type="password" placeholder="Enter password" formControlName="Password"/></div>
+                        <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0"><a class="small" routerLink="/auth/forgot-password">Olvido su contraseña?</a></div>
+                        <button type="submit">Submit</button> 
                     </form>
                 </div>
                 <div class="card-footer text-center">
-                    <div class="small"><a routerLink="/auth/register">Need an account? Sign up!</a></div>
+                    <div class="small"><a routerLink="/auth/register">Necesita un cuenta? Registrese</a></div>
                 </div>
             </div>
         </div>
