--- a/src/app/producto-detalle-component/producto-detalle-component.component.html
+++ b/src/app/producto-detalle-component/producto-detalle-component.component.html
@@ -31,22 +31,17 @@
             </div>
 
             <p class="lead">
-              <span class="mr-1">
-                <del>$200</del>
-              </span>
-              <span>$100</span>
+              <span><span id="precioAntiguo">$200</span> <b> ${{producto?.precio}}</b></span>
             </p>
 
             <p class="lead font-weight-bold">{{producto?.nombre}}</p>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dolor suscipit libero eos atque quia ipsa
-              sint voluptatibus!
-              Beatae sit assumenda asperiores iure at maxime atque repellendus maiores quia sapiente.</p>
+            <p>{{producto?.descripcion}}.</p>
 
             <div class="d-flex justify-content-left">
               <!-- Default input -->
               <input #cantidadProductos type="number" value="1" aria-label="Search" class="form-control" style="width: 100px">
-              <button (click)="agregarProducto(producto?.id, cantidadProductos.value)" class="btn btn-primary btn-md my-0 p">Add to cart
+              <button (click)="agregarProducto(producto?.id, cantidadProductos.value)" class="btn btn-warning  btn-outline-darkp" >Agregar al carrito
                 <i class="fas fa-shopping-cart ml-1"></i>
               </button>
 
@@ -67,11 +62,9 @@
         <!--Grid column-->
         <div class="col-md-6 text-center">
 
-          <h4 class="my-4 h4">Additional information</h4>
+          <h4 class="my-4 h4">También podria interesarte.</h4>
 
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus suscipit modi sapiente illo soluta odit
-            voluptates,
-            quibusdam officia. Neque quibusdam quas a quis porro? Molestias illo neque eum in laborum.</p>
+          <p>Estaria bueno poner otros productos de la tienda.</p>
 
         </div>
         <!--Grid column-->
