--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -4,17 +4,17 @@
             <div class="card shadow-lg border-0 rounded-lg mt-5">
                 <div class="card-header"><h3 class="text-center font-weight-light my-4">Crear Cuenta</h3></div>
                 <div class="card-body">
-                    <form>
+                    <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
                         <div class="form-row">
-                            <div class="form-group"><label class="small mb-1" for="inputNombre">Nombre</label><input class="form-control py-4" id="inputNombre"   aria-describedby="nameHelp" placeholder="Ingrese nombre" /></div>
-                            <div class="form-group"><label class="small mb-1" for="inputApellido">Apellido</label><input class="form-control py-4" id="inputApellido"  aria-describedby="apellidoHelp" placeholder="Ingrese apellido" /></div>
+                            <div class="form-group"><label class="small mb-1" for="inputNombre">Nombre</label><input formControlName="nombre" class="form-control py-4" id="inputNombre"   aria-describedby="nameHelp" placeholder="Ingrese nombre" /></div>
+                            <div class="form-group"><label class="small mb-1" for="inputApellido">Apellido</label><input formControlName="apellido" class="form-control py-4" id="inputApellido"  aria-describedby="apellidoHelp" placeholder="Ingrese apellido" /></div>
                         </div>
-                        <div class="form-group"><label class="small mb-1" for="inputEmailAddress">Email</label><input class="form-control py-4" id="inputEmailAddress" type="email" aria-describedby="emailHelp" placeholder="Enter email address" /></div>
+                        <div class="form-group"><label class="small mb-1" for="inputEmailAddress">Email</label><input formControlName="email" class="form-control py-4" id="inputEmailAddress" type="email" aria-describedby="emailHelp" placeholder="Enter email address" /></div>
                         <div class="form-row">
-                                <div class="form-group"><label class="small mb-1" for="inputPassword">Contraseña</label><input class="form-control py-4" id="inputPassword" type="password" aria-describedby="passwordHelp" placeholder="Ingrese contraseña" /></div>
-                                <div class="form-group"><label class="small mb-1" for="inputConfirmPassword">Confirmar Contraseña</label><input class="form-control py-4" id="inputConfirmPassword" type="password" aria-describedby="passwordConfirmHelp" placeholder="Ingrese  de nuevo contraseña" /></div>
+                                <div class="form-group"><label class="small mb-1" for="inputPassword">Contraseña</label><input formControlName="contraseña" class="form-control py-4" id="inputPassword" type="password" aria-describedby="passwordHelp" placeholder="Ingrese contraseña" /></div>
+                                <div class="form-group"><label class="small mb-1" for="inputConfirmPassword">Confirmar Contraseña</label><input  class="form-control py-4" id="inputConfirmPassword" type="password" aria-describedby="passwordConfirmHelp" placeholder="Ingrese  de nuevo contraseña" /></div>
                         </div>
-                        <div class="form-group mt-4 mb-0"><a class="btn btn-primary btn-block" routerLink="/dashboard">registrar</a></div>
+                        <div class="form-group mt-4 mb-0"><button type="submit">Registrar</button> </div>
                     </form>
                 </div>
                 <div class="card-footer text-center">
