--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -31,8 +31,7 @@
                             <div class="form-group"><label class="small mb-1"
                                     for="inputPassword">Contraseña</label><input formControlName="contraseña"
                                     class="form-control py-4" id="inputPassword" type="password"
-                                    aria-describedby="passwordHelp" placeholder="Ingrese contraseña"
-                                     /></div>
+                                    aria-describedby="passwordHelp" placeholder="Ingrese contraseña" /></div>
                             <div class="text-danger" *ngIf="signupForm.get('contraseña')?.hasError('required') ">
                                 <span>La contraseña es obligatoria</span>
                             </div>
@@ -56,7 +55,10 @@
                                 <span>La contraseñas no coinciden</span>
                             </div>
                         </div>
-                        <div class="form-group mt-4 mb-0"><button type="submit">Registrar</button> </div>
+                        <div class="form-row">
+                            <div class="form-group mt-4 mb-0"><button type="submit"
+                                class="btn btn-warning">Registrar</button> </div>
+                        </div>
                     </form>
                 </div>
                 <div class="card-footer text-center">
