--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -60,7 +60,7 @@
               <td>{{element.precio}}</td>
               <td>{{element.cantidad}}</td>
               <td>
-                <a href="#" style="text-decoration:none; color: white;" (click)="deleteProd(element._id)">
+                <a style="text-decoration:none; color: white;" (click)="deleteProd(element._id)">
                   <i class="bi bi-trash"></i>
                 </a>
               </td>
