--- a/src/app/components/tienda/tienda.component.html
+++ b/src/app/components/tienda/tienda.component.html
@@ -28,7 +28,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button (click)="agregarProducto(element._id, 1)" type="button" class="btn btn-sm  btn-outline-dark">Agregar al carrito</button>
-                    <button [routerLink]="['/detalle', indice + 1]" routerLinkActive="active" type="button" class="btn btn-sm  btn-outline-dark">Ver detalle</button>
+                    <button [routerLink]="['/detalle', element._id]" routerLinkActive="active" type="button" class="btn btn-sm  btn-outline-dark">Ver detalle</button>
                   </div>
                  
                 </div>
