--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,7 +8,7 @@
                         <div class="form-group"><label class="small mb-1" for="inputEmailAddress">Email</label><input class="form-control py-4" id="inputEmailAddress" type="email" placeholder="Enter email address" formControlName="Username"/></div>
                         <div class="form-group"><label class="small mb-1" for="inputPassword">Contraseña</label><input class="form-control py-4" id="inputPassword" type="password" placeholder="Enter password" formControlName="Password"/></div>
                         <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0"><a class="small" routerLink="/auth/forgot-password">Olvido su contraseña?</a></div>
-                        <button type="submit" class="btn btn-warning">Submit</button> 
+                        <button type="submit">Submit</button> 
                     </form>
                 </div>
                 <div class="card-footer text-center">
