Agrega preguntar antes de confirmar, y metodo que confirma la compra y la tranformar a pedido

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,37 +1,38 @@
-<header class=" sticky-top p-3 bg-dark text-white">
-    <div class="container">
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <a routerLink="/" routerLinkActive="active" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-          <img src="../../assets/img/logo.png" class="logo" alt="...">
-        </a>
+<header class="sticky-top p-3 bg-dark text-white">
+  <div class="container">
+    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+      <a routerLink="/" routerLinkActive="active"
+        class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+        <img src="../../assets/img/logo.png" class="logo" alt="..." />
+      </a>
 
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a routerLink="/" routerLinkActive="active" class="nav-link px-2 text-white">Home</a></li>
-          <li><a href="/big-tienda" class="nav-link px-2 text-white">Tienda</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Contacto</a></li>
-        </ul>
+      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        <li>
+          <a routerLink="/" routerLinkActive="active" class="nav-link px-2 text-white">Home</a>
+        </li>
+        <li>
+          <a href="/big-tienda" class="nav-link px-2 text-white">Tienda</a>
+        </li>
+        <li><a href="#" class="nav-link px-2 text-white">Contacto</a></li>
+      </ul>
 
-        <!-- <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-          <input type="search" class="form-control form-control-dark text-white bg-dark" placeholder="Search..." aria-label="Search">
-        </form> -->
-
-        <div class="text-end">
-          <button type="button" class="btn btn-outline-light me-2"><a routerLink="/login" class="nav-link px-2 text-white">Login</a></button>
-          <button type="button" class="btn btn-warning"><a routerLink="/signup" class="nav-link px-2 text-white">Registrarse</a></button>
-        </div>
-      <div class="fs-4 mb-3 carritoContainer">
-        <i type="button" (click)="frame.show();actualizarCarrito()" class="bi bi-basket3-fill"></i>
+      <div class="text-end">
+        <button type="button" class="btn btn-outline-light me-2">
+          <a routerLink="/login" class="nav-link px-2 text-white">Login</a>
+        </button>
+        <button type="button" class="btn btn-warning">
+          <a routerLink="/signup" class="nav-link px-2 text-white">Registrarse</a>
+        </button>
       </div>
-
-
-
-
+      <div class="fs-4 mb-3 carritoContainer">
+        <i type="button" (click)="frame.show(); actualizarCarrito()" class="bi bi-basket3-fill"></i>
       </div>
     </div>
-  </header>
+  </div>
+</header>
 
-<div mdbModal #frame="mdbModal" class="modal fade" id="frameModalTop" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-  aria-hidden="true">
+<div mdbModal #frame="mdbModal" class="modal fade" id="frameModalTop" tabindex="-1" role="dialog"
+  aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-scrollable" role="document">
     <div class="modal-content bg-dark text-light">
       <!--Header-->
@@ -42,8 +43,8 @@
         </button>
       </div>
       <!--Body-->
-      <div class="modal-body ">
-        <table class="table text-light ">
+      <div class="modal-body">
+        <table class="table text-light">
           <thead>
             <tr>
               <th>#</th>
@@ -55,12 +56,12 @@
           </thead>
           <tbody>
             <tr *ngFor="let element of ProductosCarrito; let indice = index">
-              <th scope="row">{{indice + 1}}</th>
-              <td>{{element.nombre}}</td>
-              <td>{{element.precio}}</td>
-              <td>{{element.cantidad}}</td>
+              <th scope="row">{{ indice + 1 }}</th>
+              <td>{{ element.nombre }}</td>
+              <td>{{ element.precio }}</td>
+              <td>{{ element.cantidad }}</td>
               <td>
-                <a style="text-decoration:none; color: white;" (click)="deleteProd(element._id)">
+                <a style="text-decoration: none; color: white" (click)="deleteProd(element._id)">
                   <i class="bi bi-trash"></i>
                 </a>
               </td>
@@ -68,7 +69,7 @@
             <tr class="total">
               <th scope="row">-</th>
               <td>Total</td>
-              <td>{{Total}}</td>
+              <td>{{ Total }}</td>
               <td>-</td>
             </tr>
           </tbody>
@@ -76,12 +77,14 @@
       </div>
       <!--Footer-->
       <div class="modal-footer">
-        <button type="button" mdbBtn color="warning" outline="true" class="waves-light" mdbWavesEffect data-dismiss="modal" (click)="frame.hide()">Cerrar</button>
-        <button mdbBtn color="warning" class="waves-light" mdbWavesEffect>Pagar</button>
+        <button type="button" mdbBtn color="warning" outline="true" class="waves-light" mdbWavesEffect
+          data-dismiss="modal" (click)="frame.hide()">
+          Cerrar
+        </button>
+        <button mdbBtn color="warning" class="waves-light" mdbWavesEffect (click)="confirmarCompra();">
+          Pagar
+        </button>
       </div>
     </div>
   </div>
 </div>
-
-
-  
