--- a/src/app/components/big-tienda/big-tienda.component.html
+++ b/src/app/components/big-tienda/big-tienda.component.html
@@ -69,11 +69,11 @@
       
       <nav aria-label="Page navigation example text-center">
         <ul class="pagination justify-content-center">
-          <li class="page-item "><a class="page-link link-dark p-1" >Previous</a></li>
+          <li class="page-item "><a class="page-link link-dark p-1" >Anterior</a></li>
           <li class="page-item"><a class="page-link link-dark p-1" >1</a></li>
           <li class="page-item"><a class="page-link link-dark p-1" >2</a></li>
           <li class="page-item"><a class="page-link link-dark p-1" >3</a></li>
-          <li class="page-item"><a class="page-link link-dark p-1" >Next</a></li>
+          <li class="page-item"><a class="page-link link-dark p-1" >Siguiente</a></li>
         </ul>
       </nav>
 
