--- a/src/app/components/tienda/tienda.component.html
+++ b/src/app/components/tienda/tienda.component.html
@@ -1,12 +1,10 @@
 <div class="b-example-divider"></div>
-<div class="container col-xxl-8 px-4 py-5">
   <div class="row justify-content-center align-items-center g-5 py-5">
     <div class="col-lg-6 text-center">
       <img src="../../assets/img/logo.png" class="logo" alt="..." width="" />
       <h1 class="display-5 fw-bold lh-1 mb-3">Accesorios para vehiculos</h1>
       <p class="lead">
-        Registrate para empezar a disfrutar de las mejores marcas en accesorios
-        !
+        ¡Registrate para empezar a disfrutar de las mejores marcas en accesorios!
       </p>
       <div class="d-grid gap-2 d-md-flex justify-content-center">
         <a href="/registro" class="btn btn-outline-dark">Registrarme</a>
@@ -14,8 +12,6 @@
       </div>
     </div>
   </div>
-</div>
-
 <div class="album py-5 bg-light">
   <div class="container">
     <h2 class="text-center">Ofertas de la semana</h2>
@@ -30,11 +26,14 @@
               class="bd-placeholder-img card-img-top"
               alt=""
               focusable="false"
-              preserveAspectRatio="xMidYMid slice"
+              preserveAspectRatio="xMidYMid slice" 
             />
             <div class="card-body">
-              <p class="card-text">{{ element.nombre }}</p>
-              <p class="card-text">{{ element.precio }}</p>
+              <p class="card-text" id="card-text-nombre">{{ element.nombre }}</p>
+
+              <!--<div *ngIf="let element of Productos | filterData:'tieneDescuento':true">TIENE DESCUENTO</div>-->
+
+              <p class="card-text">${{ element.precio }}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button
@@ -57,7 +56,6 @@
             </div>
           </div>
         </div>
->>>>>>> Login
       </div>
     </div>
   </div>
