--- a/src/app/components/producto-detalle-component/producto-detalle-component.component.html
+++ b/src/app/components/producto-detalle-component/producto-detalle-component.component.html
@@ -7,7 +7,7 @@
         <!--Grid column-->
         <div class="col-md-6 mb-4">
 
-          <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/14.jpg" class="img-fluid" alt="">
+          <img src="../../assets/img/{{producto?.image}}" class="img-fluid" alt="">
 
         </div>
         <!--Grid column-->
@@ -18,35 +18,19 @@
           <!--Content-->
           <div class="p-4">
 
-            <div class="mb-3">
-              <a href="">
-                <span class="badge purple mr-1">Category 2</span>
-              </a>
-              <a href="">
-                <span class="badge blue mr-1">New</span>
-              </a>
-              <a href="">
-                <span class="badge red mr-1">Bestseller</span>
-              </a>
-            </div>
-
             <p class="lead">
-              <span class="mr-1">
-                <del>$200</del>
-              </span>
-              <span>$100</span>
+              
+              <span>${{producto?.precio}}</span>
             </p>
 
             <p class="lead font-weight-bold">{{producto?.nombre}}</p>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dolor suscipit libero eos atque quia ipsa
-              sint voluptatibus!
-              Beatae sit assumenda asperiores iure at maxime atque repellendus maiores quia sapiente.</p>
+            <p>{{producto?.descripcion}}</p>
 
             <div class="d-flex justify-content-left">
               <!-- Default input -->
               <input #cantidadProductos type="number" value="1" aria-label="Search" class="form-control" style="width: 100px">
-              <button (click)="agregarProducto(producto?._id, cantidadProductos.value)" class="btn btn-primary btn-md my-0 p">Add to cart
+              <button (click)="agregarProducto(producto?._id, cantidadProductos.value)" class="btn btn-primary btn-md my-0 p">Agregar al carrito
                 <i class="fas fa-shopping-cart ml-1"></i>
               </button>
               
@@ -60,53 +44,8 @@
         <!--Grid column-->
 
       </div>
-      <!--Grid row-->
 
-      <hr>
-      <div class="row d-flex justify-content-center wow fadeIn">
-
-        <!--Grid column-->
-        <div class="col-md-6 text-center">
-
-          <h4 class="my-4 h4">Additional information</h4>
-
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus suscipit modi sapiente illo soluta odit
-            voluptates,
-            quibusdam officia. Neque quibusdam quas a quis porro? Molestias illo neque eum in laborum.</p>
-
-        </div>
-        <!--Grid column-->
-
-      </div>
-      <!--Grid row-->
-
-      <!--Grid row-->
-      <div class="row wow fadeIn">
-
-        <!--Grid column-->
-        <div class="col-lg-4 col-md-12 mb-4">
-
-          <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/11.jpg" class="img-fluid" alt="">
-
-        </div>
-        <!--Grid column-->
-
-        <!--Grid column-->
-        <div class="col-lg-4 col-md-6 mb-4">
-
-          <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/12.jpg" class="img-fluid" alt="">
-
-        </div>
-        <!--Grid column-->
-
-        <!--Grid column-->
-        <div class="col-lg-4 col-md-6 mb-4">
-
-          <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/13.jpg" class="img-fluid" alt="">
-
-        </div>
-        <!--Grid column-->
-
-      </div>
+     
+      
     </div>
 </main>
