--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -44,7 +44,7 @@
                             <div class="form-group"><label class="small mb-1" for="inputConfirmPassword">Confirmar
                                     Contraseña</label><input formControlName="confirmContraseña"
                                     class="form-control py-4" id="inputConfirmPassword" type="password"
-                                    aria-describedby="passwordConfirmHelp" placeholder="Ingrese  de nuevo contraseña" />
+                                    aria-describedby="passwordConfirmHelp" placeholder="Ingrese de nuevo la contraseña" />
                             </div>
                             <div class="text-danger"
                                 *ngIf="signupForm.get('confirmContraseña')?.touched && signupForm.get('confirmContraseña')?.hasError('required')">
