--- a/src/app/components/tienda/tienda.component.html
+++ b/src/app/components/tienda/tienda.component.html
@@ -22,7 +22,7 @@
 
 <div class="album py-5 bg-light">
   <div class="container">
-    <h2 class="text-center">Ofertas de la semana</h2>
+    <h2 class="text-center">Ultimos lanzamientos</h2>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
       <div *ngFor="let element of Productos" class="col">
         <div class="p-3 border bg-light">
