--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
             <div class="card shadow-lg border-0 rounded-lg mt-5">
                 <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
                 <div [hidden]="loginError==false" class="alert alert-danger box-msg" role="alert">
-                     Usuario y/o contraseña incorrecto
+                     Informacion incorrecta / usuario no verificado
                   </div>
                 <div class="card-body">
                     <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
